# libhx

./: .gitignore  COPYING  LICENSE.MIT  Makefile.am  Makefile.bsd  Makefile.cygwin  Makefile.linux  Makefile.mingw  Makefile.sunos  Mk  Mkbase.0  Mkbase.1  Mkbase.2  README.rst  README.txt  autogen.sh  configure.ac  dvconfigure  format.c  hmc.c  libHX.h  libHX.pc.in  libHX.spec  other.c  qconf  ux-file.c  ux-mmap.c
assorted/: .gitignore  Makefile.am  deque2.c  ffs.c  pack.c  tofrac.c  unit2any.c
doc/: Building.txt  Makefile.am  api.rst  api.txt  arbtree.txt  assorted.txt  bitmaps.rst  changelog.rst  changelog.txt  const_cast.c  deque.txt  dir.txt  dirstamp.rst  dirstamp.txt  files_and_dirs.rst  format.txt  generate  generator.cpp  helper_headers.rst  history.rst  init.rst  inline_clist.rst  inline_list.rst  install.rst  libHX_Documentation.lyx  libHX_Documentation.rst  linked_list.rst  macros.rst  maps.rst  math.txt  memory_container.rst  misc_functions.rst  opt.txt  option_parsing.rst  process_management.rst  rand.txt  random_numbers.rst  scope.rst  shconfig.rst  shconfig.txt  (+13 more)
include/: Makefile.am  libHX.h
include/libHX/: cast.h  ctype_helper.h  defs.h  deque.h  endian.h  endian_float.h  intdiff.hpp  io.h  libxml_helper.h  list.h  map.h  misc.h  option.h  proc.h  scope.hpp  socket.h  string.h  tie.hpp  wx_helper.hpp
m4/: gcc4_visibility.m4
m4lib/: gcc4_visibility.m4
src/: .gitignore  Makefile.am  analyze.sh  arbtree.c  arbtree.h  clist.h  containerof.c  defs.h  deque.c  deque.h  dir.c  dirstamp.c  dl.c  format.c  hmc.c  internal.h  io.c  libHX.h  libHX.map  libxml_helper.h  list.h  map.c  map_int.h  mc.c  misc.c  misc.h  opt.c  option.h  other.c  proc.c  proc.h  rand.c  rtcheck.c  socket.c  string.c  string.h  tc-arbtree.c  tc-cast.c  tc-compile.c  tc-deque.c  (+46 more)
src/include/: Makefile.am  libHX.h
src/include/libHX/: arbtree.h  defs.h  libxml_helper.h  list.h  map.h  misc.h  option.h  string.h
t/: .btseq.d  .test_btree.d  .test_dir.d  .test_multiline.d  .test_opt.d  .test_sh.d  .test_str.d  .test_strncat.d  .test_strrep.d  .test_strsep.d  LICENSE  Makefile.am  btseq.c  longline.txt  test_btree.c  test_dir.c  test_format.c  test_hpp.cpp  test_multiline.c  test_opt.c  test_str.c  test_strncat.c  test_strrep.c  test_strsep.c
