# -*- Makefile -*-

nobase_include_HEADERS = libHX.h libHX/cast.h \
	libHX/ctype_helper.h libHX/defs.h libHX/deque.h libHX/endian.h libHX/init.h \
	libHX/intdiff.hpp libHX/io.h libHX/list.h \
	libHX/map.h libHX/misc.h libHX/option.h libHX/proc.h libHX/socket.h libHX/string.h \
	libHX/libxml_helper.h libHX/wx_helper.hpp
